query done and added checker api key

--- a/app/src/main/res/menu/menu_movies.xml
+++ b/app/src/main/res/menu/menu_movies.xml
@@ -9,5 +9,9 @@
         android:id="@+id/action_upcoming"
         android:title="Upcoming" />
 
+    <item
+        android:id="@+id/action_top_rated"
+        android:title="Top Rated" />
+
 
 </menu>
