video list content ui added

--- a/app/src/main/res/layout/activity/layout/activity_movie_content.xml
+++ b/app/src/main/res/layout/activity/layout/activity_movie_content.xml
@@ -46,6 +46,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_movie" />
+    <include layout="@layout/activity_movie" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
